# rust-actix-auth-todo

./: .env  Cargo.toml  Dockerfile  Makefile.toml
db/: data.sql  setup.sh  structure.sql
src/: main.rs
src/api/: mod.rs
src/api/v1/: mod.rs
src/api/v1/account/: handlers.rs  mod.rs  repository.rs  service.rs
src/api/v1/account/models/: account.rs  account_role.rs  mod.rs
src/api/v1/account/models/dto/: create_account.rs  get_accounts.rs  mod.rs  update_account.rs
src/api/v1/account/models/query/: mod.rs  search_account.rs
src/api/v1/account/models/responses/: create_account.rs  get_account_by_id.rs  get_accounts.rs  mod.rs  update_account.rs
src/api/v1/auth/: handlers.rs  mod.rs  repository.rs  service.rs
src/api/v1/auth/models/: mod.rs
src/api/v1/auth/models/dto/: mod.rs  registration.rs  sign_in.rs
src/api/v1/auth/models/responses/: mod.rs
src/api/v1/todo/: handlers.rs  mod.rs  repository.rs  service.rs
src/api/v1/todo/models/: mod.rs  todoitem.rs  todolist.rs
src/api/v1/todo/models/dto/: create_todoitem.rs  create_todolist.rs  delete_todoitem.rs  delete_todolist.rs  get_todoitems.rs  get_todolists.rs  mod.rs  update_todoitem.rs  update_todolist.rs
src/api/v1/todo/models/query/: mod.rs  search_todoitems.rs  (+1 more)
src/app/: error.rs  response.rs  state.rs
src/common/handlers/: check_session_user.rs  create_session.rs  greet.rs  mod.rs  test_response.rs
src/common/models/: mod.rs  pagination.rs  role.rs  row_count.rs  session.rs
src/common/services/: crypto.rs  mod.rs  session.rs
src/config/: db.rs  mod.rs  server.rs  tracing.rs
src/session/: mod.rs
(+4 files in other folders)
