[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
#
actix-web = "4.0.0-beta.5"
actix-cors = "0.6.0-beta.2"
actix-identity = "0.4.0-beta.4"
actix-session = "0.5.0-beta.4"
#
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
#
tracing = "0.1"
tracing-subscriber = { version= "0.3", features = ["env-filter", "json", "time"] }
tracing-futures = "0.2"
#
dotenv = "*"
config = "*"
#
uuid = { version = "0.8", features = ["serde", "v4"] }
#
sqlx = { version = "0.5.5", features = [ "runtime-tokio-rustls", "postgres", "uuid", "json", "chrono" ] }
#
chrono = { version = "0.4.19", features = ["serde"] }
# 
argonautica = "0.2.0"